--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         </div>
 
                         <div class="about__buttons">
-                            <a download="" href="resume.html" class="button button--flex">
+                            <a href="resume.html" class="button button--flex">
                                 Download Resume<i class="uil uil-file-download-alt button__icon"></i>
                             </a>
                         </div>
@@ -219,20 +219,20 @@
                         </div>
                     </div>
 
-                    <form name="contact" id="ContactForm" class="cpntact__form grid" data-netlify-recaptcha="true" data-netlify="true" action="/success/">
+                    <form name="contact" id="ContactForm" class="contact__form grid" data-netlify-recaptcha="true" data-netlify="true" action="/success/">
                         <div class="contact__inputs grid">
                             <div class="contact__content">
                                 <label for="" class="contact__label">Name</label>
-                                <input name="name" type="text" class="contact__input">
+                                <input name="name" type="text" class="contact__name">
                             </div>
                             <div class="contact__content">
                                 <label for="" class="contact__label">Email</label>
-                                <input name="email" type="email" class="contact__input">
+                                <input name="email" type="email" class="contact__email">
                             </div>
                         </div>
                         <div class="contact__content">
                             <label for="" class="contact__label">Message</label>
-                            <textarea name="message" id="" cols="0" rows="7" class="contact__input"></textarea>
+                            <textarea name="message" id="" cols="0" rows="7" class="contact__msg"></textarea>
                         </div>
                         <div data-netlify-recaptcha="true"></div>
                         <div>
@@ -265,5 +265,28 @@
 
         <!--==================== MAIN JS ====================-->
         <script src="assets/js/main.min.js"></script>
+        <script src="https://smptjs.com/v3/smtp.js"></script>
+        <script>
+            
+            function sendMsg(e){
+                e.preventDefault();
+            
+            const   form = document.querySelector('.contact__form grid'),
+                    name = document.querySelector('.contact__name'),
+                    email = document.querySelector('.contact__email'),
+                    msg = document.querySelector('.contac__msg');
+
+            Email.send({
+                SecureToken : "42d99ece-4058-4e23-95b3-ea1cd2ae2c22",
+                To : 'uukinaulf@gmail.com',
+                From : email.value,
+                Subject : "Contact Form",
+                Body : msg.value
+            }).then(
+            message => alert(message)
+            );
+        }
+        </script>
+
     </body>
 </html>
