--- a/success/index.html
+++ b/success/index.html
@@ -207,16 +207,16 @@
                         <div class="contact__inputs grid">
                             <div class="contact__content">
                                 <label for="" class="contact__label">Name</label>
-                                <input name="name" type="text" class="contact__input">
+                                <input name="name" type="text" class="contact__name">
                             </div>
                             <div class="contact__content">
                                 <label for="" class="contact__label">Email</label>
-                                <input name="email" type="email" class="contact__input">
+                                <input name="email" type="email" class="contact__email">
                             </div>
                         </div>
                         <div class="contact__content">
                             <label for="" class="contact__label">Message</label>
-                            <textarea name="message" id="" cols="0" rows="7" class="contact__input"></textarea>
+                            <textarea name="message" id="" cols="0" rows="7" class="contact__msg"></textarea>
                         </div>
 
                         <div>
