--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
                         </div>
                         <div data-netlify-recaptcha="true"></div>
                         <div>
-                            <a class="button button--flex" id="submitButton">
+                            <button class="button button--flex" id="submitButton">
                                 Send message
                                 <i class="uil uil-message project__icon button__icon"></i>
-                            </a>
+                            </button>
                         </div>
                     </form>
                 </div>
