--- a/success/index.html
+++ b/success/index.html
@@ -142,7 +142,7 @@
                         </div>
 
                         <div class="about__buttons">
-                            <a download="" href="resume.html" class="button button--flex">
+                            <a href="resume.html" class="button button--flex">
                                 Download Resume<i class="uil uil-file-download-alt button__icon"></i>
                             </a>
                         </div>
