--- a/index.html
+++ b/index.html
@@ -223,16 +223,16 @@
                         <div class="contact__inputs grid">
                             <div class="contact__content">
                                 <label for="" class="contact__label">Name</label>
-                                <input name="name" type="text" class="contact__name">
+                                <input name="name" type="text" id="name" class="contact__name">
                             </div>
                             <div class="contact__content">
                                 <label for="" class="contact__label">Email</label>
-                                <input name="email" type="email" class="contact__email">
+                                <input name="email" type="email" id="email" class="contact__email">
                             </div>
                         </div>
                         <div class="contact__content">
                             <label for="" class="contact__label">Message</label>
-                            <textarea name="message" id="" cols="0" rows="7" class="contact__msg"></textarea>
+                            <textarea name="message" id="" cols="0" rows="7" id="msg" class="contact__msg"></textarea>
                         </div>
                         <div data-netlify-recaptcha="true"></div>
                         <div>
@@ -268,24 +268,24 @@
         <script src="https://smptjs.com/v3/smtp.js"></script>
         <script>
             
-            function sendMsg(e){
-                e.preventDefault();
-            
-            const   form = document.querySelector('.contact__form grid'),
-                    name = document.querySelector('.contact__name'),
-                    email = document.querySelector('.contact__email'),
-                    msg = document.querySelector('.contac__msg');
-
+            var submitButton = document.getElementById('submitButton');
+            submitButton.addEventListener('click', function(e){
+                e.preventDefault()
+                var name = document.getElementById('name').value;
+                var email = document.getElementById('email').value;
+                var msg = document.getElementById('msg').value;
+                var body = 'name: ' + name + '<br/> email: ' + email + '<br/> message' + message;
+ 
             Email.send({
                 SecureToken : "42d99ece-4058-4e23-95b3-ea1cd2ae2c22",
                 To : 'uukinaulf@gmail.com',
-                From : email.value,
+                From : email,
                 Subject : "Contact Form",
-                Body : msg.value
+                Body : body
             }).then(
             message => alert(message)
             );
-        }
+        })
         </script>
 
     </body>
