--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         </div>
                     </div>
 
-                    <form name="contact" id="ContactForm" class="contact__form grid" data-netlify-recaptcha="true" data-netlify="true" action="/success/">
+                    <form name="contact" id="ContactForm" class="contact__form grid" data-netlify-recaptcha="true" data-netlify="true">
                         <div class="contact__inputs grid">
                             <div class="contact__content">
                                 <label for="" class="contact__label">Name</label>
