--- a/success/index.html
+++ b/success/index.html
@@ -203,7 +203,7 @@
                     <div>
                         <p>You already sent a message... <a href="../index.html#contact" class="button button--flex">Send another message <i class="uil uil-envelope-redo button__icon"></i></a></p>
                     </div>
-                    <form name="contact" id="ContactForm" style="visibility: hidden;" class="cpntact__form grid" data-netlify="true" action="/success">
+                    <form name="contact" id="ContactForm" style="visibility: hidden;" class="cpntact__form grid" data-netlify="true">
                         <div class="contact__inputs grid">
                             <div class="contact__content">
                                 <label for="" class="contact__label">Name</label>
