--- a/index.html
+++ b/index.html
@@ -265,7 +265,8 @@
 
         <!--==================== MAIN JS ====================-->
         <script src="assets/js/main.min.js"></script>
-        <script src="https://smptjs.com/v3/smtp.js"></script>
+        <script src="https://smtpjs.com/v3/smtp.js">
+        </script>
         <script>
             
             var submitButton = document.getElementById('submitButton');
