--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.12/lottie.min.js"></script>
 
         <!--==================== MAIN JS ====================-->
-        <script src="assets/js/main.min.js"></script>
+        <script src="assets/js/main.js"></script>
         <script src="https://smtpjs.com/v3/smtp.js">
         </script>
         <script>
