--- a/index.html
+++ b/index.html
@@ -187,20 +187,12 @@
             </section> -->
 
             <!--==================== CONTACT ME ====================-->
-            <section class="contact section" id="contact">
+       <!--     <section class="contact section" id="contact">
                 <h2 class="section__title">Contact me</h2>
                 <span class="section__subtitle">Get in touch</span>
 
                 <div class="contact__container container grid">
                     <div>
-                        <!-- <div class="contact__information">
-                            <i class="uil uil-phone contact__icon"></i>
-
-                            <div>
-                                <h3 class="contact__title">Call me</h3>
-                                <span class="contact__subtitle">55-1234-5678</span>
-                            </div>
-                        </div> -->
                         <div class="contact__information">
                             <i class="uil uil-envelope contact__icon"></i>
 
@@ -245,7 +237,7 @@
                 </div>
             </section>
         </main>
-
+    -->
 
         <!--==================== FOOTER ====================-->
 
