--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                                 <i class="uil uil-user-circle nav__icon"></i> About me
                             </a>
                         </li>
-                        <li class="nav__item">
+                        <!--<li class="nav__item">
                             <a href="#contact" class="nav__link">
                                 <i class="uil uil-envelopes nav__icon"></i> Contact me
                             </a>
-                        </li>
+                        </li>-->
                     </ul>
                     <i class="uil uil-times nav__close nav__icon" id="nav-close"></i>
                 </div>
@@ -116,7 +116,7 @@
                             <p class="home__description">
                                 Ex-Vvibu
                             </p>
-                            <a href="#contact" class="button button--flex">Contact me <i class="uil uil-message button__icon"></i></a>
+                            <a href="mailto:uukinaulf@gmail.com" class="button button--flex">Contact me <i class="uil uil-message button__icon"></i></a>
                         </div>
                     </div>
 
