--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         </div>
 
                         <div class="about__buttons">
-                            <a href="resume.html" class="button button--flex">
+                            <a href="resume.html" target="_blank" class="button button--flex">
                                 Download Resume<i class="uil uil-file-download-alt button__icon"></i>
                             </a>
                         </div>
