--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </section> -->
 
             <!--==================== CONTACT ME ====================-->
-       <!--     <section class="contact section" id="contact">
+            <section class="contact section" id="contact">
                 <h2 class="section__title">Contact me</h2>
                 <span class="section__subtitle">Get in touch</span>
 
@@ -237,7 +237,7 @@
                 </div>
             </section>
         </main>
-    -->
+    
 
         <!--==================== FOOTER ====================-->
 
