--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="keywords" content="uuk,Uuk,Uukina,Portfolio,Resume,uukina,contact">
         <meta name="author" content="Uuk">
         <!--  OPEN GRAPH ( Facebook )-->
-        <meta property="og:url"                content="https://uukina.pages.dev/" />
+        <meta property="og:url"                content="https://uukina.netlify.app/" />
         <meta property="og:type"               content="blog" />
         <meta property="og:title"              content="Uukina" />
         <meta property="og:description"        content="Hi! I am Uukina, a College Student, and this is my portfolio webpage." />
@@ -187,7 +187,7 @@
             </section> -->
 
             <!--==================== CONTACT ME ====================-->
-           <!-- <section class="contact section" id="contact">
+            <section class="contact section" id="contact">
                 <h2 class="section__title">Contact me</h2>
                 <span class="section__subtitle">Get in touch</span>
 
@@ -211,7 +211,7 @@
                         </div>
                     </div>
 
-                    <form name="contact" id="ContactForm" class="contact__form grid" data-netlify-recaptcha="true" data-netlify="true">
+                    <form action="https://formspree.io/f/moqrynrb" method="POST" name="contact" id="ContactForm" class="contact__form grid" data-netlify-recaptcha="true" data-netlify="true">
                         <div class="contact__inputs grid">
                             <div class="contact__content">
                                 <label for="" class="contact__label">Name</label>
@@ -228,14 +228,15 @@
                         </div>
                         <div data-netlify-recaptcha="true"></div>
                         <div>
-                            <button class="button button--flex" id="submitButton">
+                            <button type="submit" class="button button--flex" id="submitButton">
                                 Send message
                                 <i class="uil uil-message project__icon button__icon"></i>
                             </button>
                         </div>
+                        <div id="status" class="success"></div>
                     </form>
                 </div>
-            </section> -->
+            </section>
         </main>
     
 
@@ -256,8 +257,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.12/lottie.min.js"></script>
 
         <!--==================== MAIN JS ====================-->
-        <script src="assets/js/main.min.js"></script>
-        <script src="https://smtpjs.com/v3/smtp.js">
+        <script src="assets/js/main.js"></script>
+        <!--<script src="https://smtpjs.com/v3/smtp.js">
         </script>
         <script>
             
@@ -279,7 +280,7 @@
             message => alert(message)
             );
         })
-        </script>
+        </script>-->
 
     </body>
 </html>
