--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <p class="home__description">
                                 Ex-Vvibu
                             </p>
-                            <a href="mailto:uukinaulf@gmail.com" class="button button--flex">Contact me <i class="uil uil-message button__icon"></i></a>
+                            <a href="#contact" class="button button--flex">Contact me <i class="uil uil-message button__icon"></i></a>
                         </div>
                     </div>
 
@@ -258,29 +258,7 @@
 
         <!--==================== MAIN JS ====================-->
         <script src="assets/js/main.js"></script>
-        <!--<script src="https://smtpjs.com/v3/smtp.js">
-        </script>
-        <script>
-            
-            var submitButton = document.getElementById('submitButton');
-            submitButton.addEventListener('click', function(e){
-                e.preventDefault()
-                var name = document.getElementById('name').value;
-                var email = document.getElementById('email').value;
-                var msg = document.getElementById('msg').value;
-                var body = 'name: ' + name + '<br/> email: ' + email + '<br/> message' + message;
- 
-            Email.send({
-                SecureToken : "42d99ece-4058-4e23-95b3-ea1cd2ae2c22",
-                To : 'uukinaulf@gmail.com',
-                From : email,
-                Subject : "Contact Form",
-                Body : body
-            }).then(
-            message => alert(message)
-            );
-        })
-        </script>-->
+        
 
     </body>
 </html>
